# plebfi2022-social-recovery

./: Cargo.toml  LICENSE  README.md
social-recovery/: Cargo.toml
social-recovery/src/: backup.rs  lib.rs  wallet.rs  wasm.rs
social-recovery/web/: backup.pug  build-assets.sh  index.pug  webpack.config.js
social-recovery/web/www/: backup.html
src/: lib.rs  wallet.rs
web/: package-lock.json  publish-site.sh
web/js/: index.js
