[package]
name = "social-recovery"
version = "0.1.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
edition = "2018"

[dependencies]
minsc = { path = "/workspace/minsc" }
#bitcoincore-rpc = "0.14.0"
rand = "0.8.5"
serde = "1.0.136"
bincode = "1.3.3"
sharks = "0.5.0"
lazy_static = "1.4.0"
serde_json = "1.0.59"

getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.65" }
wee_alloc = { version = "0.4.5" }

#clap = "3.1.8"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
# webpack fail wasm compilation without this
opt-level = "s"